# RNVS-2019-Blatt6

./: CMakeLists.txt  client.c  client.h  server.c
helper/wulkanat/: commander.h  debug.h  descriptive_types.h  friendly_heap.h
